syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hualala.aleenjava.grpc.greeter";

service GreeterService {
  rpc sayHello(GreeterRequest) returns (GreeterReply) {}
}
message GreeterRequest {
  string name = 1;
}
message GreeterReply {
  string message = 1;
}

